adds schedule to page with dummy data

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -1,46 +1,46 @@
 ---
-2025-06-19:
-  18_15: A-Punk
-  18_45: 30 perc átszerelés
-  19_15: Don't Say A Word
-  19_45: 30 perc átszerelés
-  20_15: Col-lapse (E)
-  20_45: 30 perc átszerelés
-  21_15: No Guts No Glory (F)
-  21_45: 30 perc átszerelés
-  22_15: Social Free Face
-  22_45: 30 perc átszerelés
-  23_15: Liberal Youth
-  00_00: 20 perc átszerelés
-  00_20: Reconcile (Arg)
-  00_50: 20 perc átszerelés
-  01_10: Hisztéria
-  02_45: Krumpliczukor
-2025=06-20:
-  18_00: Maradék
-  18_45: Hold On Through All
-  20_45: Tango Underground
-  21_25: Dance Or Die
-  21_55: PFA
-  22_45: Wolf Shaped Clouds
-  23_20: Poulsunk
-  00_00: dózer.hu
-  00_35: Another Way
-  01_05: For My Friends
-  01_35: Larry Kubiac
-2025-06-21:
-  18_30: Witkin
-  18_45: 30 perc átszerelés
-  19_15: Dirtywink (A)
-  19_45: 30 perc átszerelés
-  20_15: Human Error
-  20_45: 30 perc átszerelés
-  21_15: M*E*S (B)
-  22_00: 30 perc átszerelés
-  22_30: The Silver Shine
-  23_00: 30 perc átszerelés
-  23_30: Fegyelmező Részleg
-  00_15: 20 perc átszerelés
-  00_35: Wasted Youth (D)
-  01_05: 20 perc átszerelés
-  01_25: Utolsó Alkalom
+2025.06.19:
+  18-15: A-Punk
+  18-45: 30 perc átszerelés
+  19-15: Don't Say A Word
+  19-45: 30 perc átszerelés
+  20-15: Col-lapse (E)
+  20-45: 30 perc átszerelés
+  21-15: No Guts No Glory (F)
+  21-45: 30 perc átszerelés
+  22-15: Social Free Face
+  22-45: 30 perc átszerelés
+  23-15: Liberal Youth
+  00-00: 20 perc átszerelés
+  00-20: Reconcile (Arg)
+  00-50: 20 perc átszerelés
+  01-10: Hisztéria
+  02-45: Krumpliczukor
+2025.06.20:
+  18-00: Maradék
+  18-45: Hold On Through All
+  20-45: Tango Underground
+  21-25: Dance Or Die
+  21-55: PFA
+  22-45: Wolf Shaped Clouds
+  23-20: Poulsunk
+  00-00: dózer.hu
+  00-35: Another Way
+  01-05: For My Friends
+  01-35: Larry Kubiac
+2025.06.21:
+  18-30: Witkin
+  18-45: 30 perc átszerelés
+  19-15: Dirtywink (A)
+  19-45: 30 perc átszerelés
+  20-15: Human Error
+  20-45: 30 perc átszerelés
+  21-15: M*E*S (B)
+  22-00: 30 perc átszerelés
+  22-30: The Silver Shine
+  23-00: 30 perc átszerelés
+  23-30: Fegyelmező Részleg
+  00-15: 20 perc átszerelés
+  00-35: Wasted Youth (D)
+  01-05: 20 perc átszerelés
+  01-25: Utolsó Alkalom
