update contact information

--- a/data/general_details.yaml
+++ b/data/general_details.yaml
@@ -3,3 +3,6 @@ title: Free Fest
 annum: 2025
 location: Eger
 date: "2025.06.19 - 2025.06.22"
+email_address: freefesttotal@gmail.com
+facebook_url: https://www.facebook.com/freefest
+instagram_url: https://www.instagram.com/freefest_total
