Site is capable of displaying more than one stages per day

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -1,46 +1,72 @@
 ---
 2025.06.19:
-  18-15: A-Punk
-  18-45: 30 perc átszerelés
-  19-15: Don't Say A Word
-  19-45: 30 perc átszerelés
-  20-15: Col-lapse (E)
-  20-45: 30 perc átszerelés
-  21-15: No Guts No Glory (F)
-  21-45: 30 perc átszerelés
-  22-15: Social Free Face
-  22-45: 30 perc átszerelés
-  23-15: Liberal Youth
-  00-00: 20 perc átszerelés
-  00-20: Reconcile (Arg)
-  00-50: 20 perc átszerelés
-  01-10: Hisztéria
-  02-45: Krumpliczukor
+  outdoor:
+    16-00: Rocky
+    17-30: Rittyon Riot
+    18-30: Szerzetesek
+    19-30: Orwell Disznói
+    20-30: Tunga Penetráns
+    21-30: Dry Socket (USA)
+    22-30: Another Way
+    23-30: Rivers run dry
+    00-30: Lotti Bigotti
+    01-30: GOSH DJ
+  indoor:
+    15-30: Passer
+    16-30: KisGolyóBand
+    18-00: IGA
+    19-00: Sad Neaws
+    20-00: Tboi
+    21-00: Közöny
+    22-00: Fuck Bad Things
+    23-00: Azen
+    00-00: Das Lator
+    01-00: Kibaszott emberek
+    01-30: Skámbó Imi
 2025.06.20:
-  18-00: Maradék
-  18-45: Hold On Through All
-  20-45: Tango Underground
-  21-25: Dance Or Die
-  21-55: PFA
-  22-45: Wolf Shaped Clouds
-  23-20: Poulsunk
-  00-00: dózer.hu
-  00-35: Another Way
-  01-05: For My Friends
-  01-35: Larry Kubiac
+  outdoor:
+    16-00: Terrible Nights
+    17-30: Raisinboys
+    18-30: Krumpliczukor
+    19-30: Rocco
+    20-30: Linx
+    21-30: Liberal Youth
+    22-30: Tisztán a cél felé
+    23-30: Social Free Face
+    00-30: The Lubricators
+    01-30: GOSH DJ
+  indoor:
+    16-30: Demodex
+    18-00: Gepárd SS
+    19-00: Rompo
+    20-00: Furunculus
+    21-00: Erőszakszervezet
+    22-00: Boston Klinika
+    23-00: Hopəium/Shapat Terror
+    00-00: IDŐ
+    01-00: Building Ruins
+    01-30: III/2
 2025.06.21:
-  18-30: Witkin
-  18-45: 30 perc átszerelés
-  19-15: Dirtywink (A)
-  19-45: 30 perc átszerelés
-  20-15: Human Error
-  20-45: 30 perc átszerelés
-  21-15: M*E*S (B)
-  22-00: 30 perc átszerelés
-  22-30: The Silver Shine
-  23-00: 30 perc átszerelés
-  23-30: Fegyelmező Részleg
-  00-15: 20 perc átszerelés
-  00-35: Wasted Youth (D)
-  01-05: 20 perc átszerelés
-  01-25: Utolsó Alkalom
+  outdoor:
+    16-00: Hisztéria
+    17-30: BLC
+    18-30: Garga Pitic
+    19-30: Palánta
+    20-30: Buttholes
+    21-30: The Rumkicks (KOR)
+    22-30: Fegyelemző Részleg
+    23-30: Böiler
+    00-30: Yellow Spots/The Silver Shine
+    01-30: GOSH DJ
+  indoor:
+    15-30: Nevünksenki
+    16-30: Dealer Bt
+    18-00: Season Of Mist
+    19-00: Kultivátor
+    20-00: Energia 80
+    21-00: tHE sNOBS
+    22-00: Dogs On Leads
+    23-00: Francesco és a haverok
+    00-00: Turbulancer
+    01-00: Tetra
+    01-30: KBT
