Update to the latest schedule

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -1,72 +1,69 @@
 ---
 2025.06.19:
   outdoor:
-    16-00: Rocky
-    17-30: Rittyon Riot
-    18-30: Szerzetesek
-    19-30: Orwell Disznói
-    20-30: Tunga Penetráns
-    21-30: Dry Socket (USA)
-    22-30: Another Way
-    23-30: Rivers run dry
-    00-30: Lotti Bigotti
-    01-30: GOSH DJ
+    15-35: Rocky
+    16-45: Rittyó Riot
+    17-55: Surci és a Szerzetesek
+    19-05: Orwell Disznói
+    20-15: Cold Brick
+    21-25: the shitheads by tHE sNOBS
+    22-35: Another Way
+    23-45: Lotti Bigotti
   indoor:
-    15-30: Passer
-    16-30: KisGolyóBand
-    18-00: IGA
-    19-00: Sad Neaws
-    20-00: Tboi
-    21-00: Közöny
+    16-10: Demodex
+    17-20: IGA
+    18-30: Sad News
+    19-40: Tboi
+    20-50: Közöny
     22-00: Fuck Bad Things
-    23-00: Azen
-    00-00: Das Lator
-    01-00: Kibaszott emberek
-    01-30: Skámbó Imi
+    23-10: AZE N
+    00-20: Das Lator
+    01-30: Testet ölt (SRB)
 2025.06.20:
   outdoor:
-    16-00: Terrible Nights
-    17-30: Raisinboys
-    18-30: Krumpliczukor
-    19-30: Rocco
-    20-30: Linx
-    21-30: Liberal Youth
-    22-30: Tisztán a cél felé
-    23-30: Social Free Face
-    00-30: The Lubricators
-    01-30: GOSH DJ
+    15-35: Passer
+    16-45: Building Ruins
+    17-55: Gusztus
+    19-05: Rocco
+    20-15: Linx
+    21-25: Memorat
+    22-35: Dogs On Leads
+    23-45: The Lubricators
+    00-55: Tetra
   indoor:
-    16-30: Demodex
-    18-00: Gepárd SS
-    19-00: Rompo
-    20-00: Furunculus
-    21-00: Erőszakszervezet
-    22-00: Boston Klinika
-    23-00: Hopəium/Shapat Terror
-    00-00: IDŐ
-    01-00: Building Ruins
-    01-30: III/2
+    15-00: K.G.B.-KisGolyóBand
+    16-10: Raisinboys
+    17-20: Gepárd SS
+    18-30: Rompo
+    19-40: Furunculus
+    20-50: Erőszakszervezet
+    22-00: Hopəium
+    23-10: Francesco és a haverok
+    00-20: IDŐ
+    01-30: Boston Klinika
+    02-15: Salabakter
+    03-00: GOSH DJ
 2025.06.21:
   outdoor:
-    16-00: Hisztéria
-    17-30: BLC
-    18-30: Garga Pitic
-    19-30: Palánta
-    20-30: Buttholes
-    21-30: The Rumkicks (KOR)
-    22-30: Fegyelemző Részleg
-    23-30: Böiler
-    00-30: Yellow Spots/The Silver Shine
-    01-30: GOSH DJ
+    15-35: Hisztéria
+    16-45: BLC
+    17-55: Garga Pitic
+    19-05: Palánta
+    20-15: The Buttholes
+    21-25: The Rumkicks (KOR)
+    22-35: Fegyelmző Részleg
+    23-45: Böiler
+    00-55: Social Free Face
   indoor:
-    15-30: Nevünksenki
-    16-30: Dealer Bt
-    18-00: Season Of Mist
-    19-00: Kultivátor
-    20-00: Energia 80
-    21-00: tHE sNOBS
-    22-00: Dogs On Leads
-    23-00: Francesco és a haverok
-    00-00: Turbulancer
-    01-00: Tetra
-    01-30: KBT
+    15-00: Nevünksenki
+    16-10: Dealer Bt
+    17-20: Season On Mists
+    18-30: Kultivátor
+    19-40: Energia 80
+    20-50: tHE sNOBS
+    22-00: Tisztán a cél felé
+    23-10: Liberal Youth
+    00-20: KBT
+    01-30: Tunga Penetráns
+    02-15: Sophiæneth
+    03-00: GOSH DJ
