--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -46,7 +46,7 @@
 2025.06.21:
   outdoor:
     15-35: Hisztéria
-    16-45: Nevünksenki
+    16-45: Nem az a punk, aki... (könyvbemutató)
     17-55: Garga Pitic
     19-05: Palánta
     20-15: The Buttholes
@@ -55,6 +55,7 @@
     23-45: Böiler
     00-55: Social Free Face
   indoor:
+    15-00: Nevünksenki
     16-10: Dealer Bt
     17-20: Season On Mists
     18-30: Kultivátor
