Adds camping information to the venue section

--- a/data/general_details.yaml
+++ b/data/general_details.yaml
@@ -2,6 +2,7 @@
 title: Free Fest Total
 annum: 2025
 location: Eger
+camping_img_src: "https://drive.google.com/thumbnail?id=12DCPsmtwzkJPvgDgZlg9YZouy83MzXJh&sz=w750"
 date: "2025.06.19 - 2025.06.22"
 email_address: freefesttotal@gmail.com
 facebook_url: https://www.facebook.com/freefest
