--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -20,7 +20,7 @@
     00-20: Das Lator
 2025.06.20:
   outdoor:
-    15-35: Passer
+    15-35: Dehumanizator
     16-45: Building Ruins
     17-55: Linx
     19-05: Rocco
